Tried adding pre code block to prevent code wrapping.

--- a/_sass/devlog.scss
+++ b/_sass/devlog.scss
@@ -108,6 +108,10 @@ footer {
   overflow-x: auto;
 }
 
+pre code {
+  white-space: pre;
+}
+
 pre,
 code {
   overflow: auto;
